<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"

    tools:context=".EmpezarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="60"
        android:weightSum="3"
        android:orientation="vertical"
        android:background="@drawable/perfil_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="256dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_height="match_parent"
                android:src="@drawable/logo_centro_2"></ImageView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imgFotoPerfil"
                    android:src="@drawable/perfil"></ImageView>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:weightSum="2"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lblSaludo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/hello"
                        android:textColor="#fff"
                        android:textSize="20dp"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Rafael Castro"
                        android:gravity="center_vertical"
                        android:textSize="20dp"
                        android:id="@+id/lblNombre"
                        android:textColor="#fff"></TextView>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lblHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="20dp"></TextView>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:layout_margin="8dp"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_weight="30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_inferior"
                android:layout_weight="1"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70">

                    <TextView
                        android:id="@+id/lblNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/name"
                        android:textSize="16dp"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtNombre"
                        android:background="@null"
                        android:textSize="16dp"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        ></EditText>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_inferior"
                android:layout_weight="1"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70">

                    <TextView
                        android:id="@+id/lblEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="E-mail"
                        android:textSize="16dp"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtEmail"
                        android:background="@null"
                        android:textSize="16dp"
                        android:inputType="textEmailAddress"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        ></EditText>


                </RelativeLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_inferior"
                android:layout_weight="1"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70">

                    <TextView
                        android:id="@+id/lblFNac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:lines="2"

                        android:text="@string/birthdate"
                        android:textSize="16dp"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtFNac"
                        android:background="@null"
                        android:textSize="18dp"
                        android:hint="dd/mm/aaaa"
                        android:maxLength="10"
                        android:inputType="date"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        ></EditText>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_inferior"
                android:layout_weight="1"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70">

                    <TextView
                        android:id="@+id/lblTel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/telefon"
                        android:textSize="16dp"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtTelf"
                        android:background="@null"
                        android:textSize="18dp"
                        android:inputType="phone"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        ></EditText>


                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="70">

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:backgroundTint="#fff"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/menu_alterno"></Button>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>