<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:id="@+id/llHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:orientation="vertical"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="20">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="92dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/logo_centro_2"
                        android:id="@+id/banner"
                        android:tint="@color/fondo_inicio"></ImageView>

                    <TextView
                        android:id="@+id/lblTexto1"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_below="@id/banner"
                        android:layout_marginLeft="32dp"
                        android:text="@string/home_texto1"
                        android:textColor="@color/fondo_inicio"
                        android:textSize="24dp">

                    </TextView>

                    <TextView
                        android:id="@+id/lblTexto2"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_below="@id/lblTexto1"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/home_texto2"
                        android:textColor="@color/fondo_inicio"
                        android:textSize="18dp">

                    </TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="80">


                    <androidx.appcompat.widget.SearchView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="2dp"
                        android:padding="4dp"
                        app:defaultQueryHint="@string/home_pregunta"
                        app:queryHint="@string/home_pregunta"></androidx.appcompat.widget.SearchView>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="vertical">

                <GridView
                    android:id="@+id/gdvMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="2"></GridView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llBotones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:orientation="horizontal"
            android:background="#F0F0F0"
            android:weightSum="100">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rlHome"
                    android:clickable="true"
                    android:layout_weight="20">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/home"
                        android:backgroundTint="@color/pale_blue"
                        android:layout_centerInParent="true"
                        android:id="@+id/imbHome"></ImageView>

                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlMarker"
                android:clickable="true"
                android:layout_weight="20">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="32dp"
                    android:background="@drawable/marker"
                    android:layout_centerInParent="true"
                    android:id="@+id/imbMarker"></ImageView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlRecorrido"
                android:clickable="true"
                android:layout_weight="20">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/icono_360"
                    android:layout_centerInParent="true"
                    android:id="@+id/imgRecorrido"></ImageView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlCal"
                android:clickable="true"
                android:layout_weight="20">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/calendario"
                    android:layout_centerInParent="true"
                    android:id="@+id/imbCal"></ImageView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlPerfil"
                android:clickable="true"
                android:layout_weight="20">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="32dp"
                    android:background="@drawable/perfil"
                    android:layout_centerInParent="true"
                    android:id="@+id/imbPerfil"></ImageView>

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>



</LinearLayout>